--- a/404.html
+++ b/404.html
@@ -3,12 +3,11 @@
   <head>
     <title>Redirecting...</title>
     <script>
-      // Redirect all requests to the index.html
-      window.location.replace('/bh-dev/index.html');
+      window.location.replace('/bh-dev/');
     </script>
   </head>
   <body>
     If you are not redirected automatically, follow this
-    <a href="/bh-dev/index.html">link</a>.
+    <a href="/bh-dev/">link</a>.
   </body>
 </html>
