--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/bh-dev/" />
     <title>BH Dev</title>
   </head>
   <body>
